Refactored the return values for the intersection() code inherited in every object. It is now the object's responsibility to generate the ambient color/diffuse color before returning from the intersection code.
Obj loader now works with diffuse shading.

--- a/Ray Tracer/Ray Tracer.vcxproj
+++ b/Ray Tracer/Ray Tracer.vcxproj
@@ -86,6 +86,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DisplayEngine.cpp" />
+    <ClCompile Include="Object.cpp" />
     <ClCompile Include="ObjLoader.cpp" />
     <ClCompile Include="Ray Tracer.cpp" />
     <ClCompile Include="Sphere.cpp" />
