--- a/Ray Tracer/Ray Tracer.vcxproj.filters
+++ b/Ray Tracer/Ray Tracer.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Triangle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Object.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DisplayEngine.h">
